<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/idcard"
        android:layout_width="375dp"
        android:layout_height="144dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icons8_contacts_108px_1" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/idcard"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/purple_active"
        app:tabIndicatorHeight="5dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/purple_active" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnCommand"
        android:layout_below="@id/tabs" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tabs"
        android:layout_weight="0.1"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="60"
                    android:paddingStart="16dp"
                    android:text="@string/imgcode" />

                <TextView
                    android:id="@+id/txtImgCode"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="40" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtCID"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/CID" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtFullnameTH"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/name_th" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtFullnameEN"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/name_en" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDOB"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/DOB" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/Address"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtreq_number"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/Request_number"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtIssueplace"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/Issueplace"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtIssuecode"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/Issuecode"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtIssue"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/Issue"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtExpire"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/Expire"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtCardTypecode"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/CardTypecode"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtVersioncard"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/VersionCard"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txtOfficer_license"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/Officer_license"
                    android:textAlignment="center" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/btnCommand"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnlayout"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOpen"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/purple_btn"
            android:text="Open"

            android:textColor="@color/white" />
        <!--            android:onClick="OpenOnClick"-->
        <Button
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:onClick="CloseOnClick"
            android:text="Close"
            android:visibility="gone" />


        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:onClick="ClearClick"
            android:text="Clear"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/purple_btn"
            android:text="Refresh"
            android:textColor="@color/white" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/btnlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonReadAll"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/purple_btn"
            android:text="Read"
            android:textColor="@color/white" />



    </LinearLayout>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="fill_parent"
        android:layout_height="23dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:text="\n"
        android:visibility="gone" />
</RelativeLayout>