<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CID" />
            <TextView
                android:textAlignment="textStart"
                android:id="@+id/txtCID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/name_th" />

            <TextView
                android:textAlignment="textStart"
                android:id="@+id/txtFullnameTH"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="-" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/name_en" />

            <TextView
                android:textAlignment="textStart"
                android:id="@+id/txtFullnameEN"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="-" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/DOB"
                android:textStyle="bold" />
            <TextView
                android:textAlignment="textStart"
                android:id="@+id/txtDOB"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="-" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/gender"/>

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAlignment="textStart"
                android:text="-"
                />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/Address"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="-"
                android:textAlignment="textStart" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
