<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Request_number" />

            <TextView
                android:id="@+id/txtreq_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAlignment="textStart" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Issueplace" />
            <TextView
                android:textAlignment="textStart"
                android:id="@+id/txtIssueplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Issuecode" />
            <TextView
                android:textAlignment="textStart"
                android:id="@+id/txtIssuecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Issue" />
            <TextView
                android:textAlignment="textStart"
                android:id="@+id/txtIssue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Expire" />
            <TextView
                android:textAlignment="textStart"
                android:id="@+id/txtExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_LightGray"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
